package td2.SystemeFichier;

public enum ComposantType {
    REPERTOIRE, FICHIER
}
